[TASK] Fixed layout jumping on transition

--- a/src/assets/css/layout.css
+++ b/src/assets/css/layout.css
@@ -3,7 +3,7 @@
   min-height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   position: relative;
   overflow-x: hidden;
 }
@@ -13,7 +13,6 @@
   padding-bottom: 0;
   margin-bottom: 9.4rem;
   overflow-y: scroll;
-  justify-content: flex-start;
 }
 
 .l_wrapper {
